      Thanks to Stepan Golosunov for the report! (Closes: #680041)
  * apt-pkg/clean.cc:
    - run autoclean against pkg:arch and not always against pkg:native as
      this removes valid cache entries (Closes: #679371)
  * apt-pkg/deb/deblistparser.cc:
    - negative dependencies need to apply to all architectures,
      but those with a specific architecture only apply to this one

 -- David Kalnischkies <kalnischkies@gmail.com>  Sun, 01 Jul 2012 08:20:57 +0200

apt (0.9.7.1) unstable; urgency=low

  [ Program translation updates ]
  * Bulgarian (Damyan Ivanov) (Closes: #678983)
  * Hungarian (Gabor Kelemen)
  * Italian (Milo Casagrande)
  * Slovenian (Andrej Znidarsic)
  * German (Holger Wansing) (Closes: #679314)
  * Slovak (Ivan Masár) (Closes: #679448)

  [ David Kalnischkies ]
  * cmdline/apt-internal-solver.cc, cmdline/apt-mark.cc:
    - typo fixes and unfuzzy translations
  * debian/control:
    - libapt-{pkg,inst} packages should be in section 'libs' instead
      of 'admin' as by ftp-master override request in #677596
    - demote debiandoc-sgml to Build-Depends-Indep
  * doc/makefile:
    - separate translation building of debiandoc from manpages
      so that we don't need to build debiandoc for binary packages

 -- Michael Vogt <mvo@debian.org>  Fri, 29 Jun 2012 14:26:32 +0200

apt (0.9.7) unstable; urgency=low

  [ Julian Andres Klode ]
  * apt-pkg/contrib/mmap.cc:
    - Fix the Fallback option to work correctly, by not calling
      realloc() on a map mapped by mmap(), and by using malloc
      and friends instead of new[].
    - Zero out the new memory allocated with realloc().

  [ Daniel Hartwig ]
  * apt-pkg/pkgcachegen.cc:
    - always reset _error->StackCount in MakeStatusCache (Closes: #677175)

  [ David Kalnischkies ]
  * apt-pkg/deb/deblistparser.cc:
    - ensure that mixed positive/negative architecture wildcards
      are handled in the same way as dpkg handles them
    - use PackageArchitectureMatchesSpecification filter