@@ -27,6 +27,9 @@ Inst libsame:armel (1 unstable [armel])
 Conf libsame:armel (1 unstable [armel])' aptget -s install libsame:armel
 testequal 'Reading package lists...
 Building dependency tree...
+E: Unable to locate package libsame' aptget -s install libsame:armhf
+testequal 'Reading package lists...
+Building dependency tree...
 The following NEW packages will be installed:
   libsame
 0 upgraded, 1 newly installed, 0 to remove and 0 not upgraded.
